bugfix: on mobile, reduce image size

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -34,7 +34,7 @@ h6 {
 }
 
 .logo {
-  width: 80%;
+  width: 60%;
   display: flex;
   align-items: center;
   justify-content: center;
